# front/src/@codegen/api/model/auth-sign-up-post-request.ts
@@ -1,0 +1,42 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Fastify todo api
+ * Fastify todo api Swagger
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+
+/**
+ * 
+ * @export
+ * @interface AuthSignUpPostRequest
+ */
+export interface AuthSignUpPostRequest {
+    /**
+     * 
+     * @type {string}
+     * @memberof AuthSignUpPostRequest
+     */
+    'name'?: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof AuthSignUpPostRequest
+     */
+    'email': string;
+    /**
+     * 
+     * @type {string}
+     * @memberof AuthSignUpPostRequest
+     */
+    'password': string;
+}
+
